# PikeVM

./: .gitignore  Copyright.txt  README.md  master.pike  todo.txt
dev/: char.pike  console.pike  pty.pike
etc/httpd/: httpd.conf.pike
etc/rc.d/: rc.pike  rc.runonce.pike
etc/rc.d/init/: ftpd.pike  httpd.pike  securityd.pike  telnetd.pike  verbd.pike
etc/rc.d/rc.5/: S01securityd
includes/: addrinfo.h  clean_up.h  command.h  commands.h  config.h  daemons.h  default_paths.h  devices.h  inttypes.h  kernel.h  master.h  more.h  msgtypes.h  mudlib.h  netdb.h  security.h  service.h  shell.h  stdio.h  stdlib.h  unistd.h
includes/daemons/: ftp.h  telnet.h
includes/domain/: save.h
includes/driver/: function.h
includes/module/: array.h  fifo.h  getopt.h  opengl.h  process.h  profiling.h  regexp.h  sql.h  stack.h  stdio.h  string.h  syslog.h
includes/mudlib/: channel.h  commands.h  flags.h  hooks.h  lpscript.h  move.h  msgtypes.h  setbit.h  size.h  verbs.h
includes/netinet/: in.h
includes/netinet6/: in6.h
includes/sys/: ioctl.h  os_uio.h  socket.h  time.h  types.h
lib/: channeld.pike  libnetdb.pmod  libservice.pmod  libshell.pmod  libsocket.pmod  libstdio.pmod  libtime.pmod  libunistd.pmod
lib/channel/: channel_info.pike  cmd.pike  moderation.pike
lib/core/: hookprovider.pike
lib/domain/modules/: m_save.pike
lib/domain/secure/modules/: m_shell.pike  m_shellvars.pike
lib/httpd/: configuration.pike
lib/httpd/modules/: mod_apache.pike  mod_cgi.pike
lib/httpd/modules/mod_apache/: apachehandler.pike
lib/httpd/modules/mod_cgi/: cgiexec.pike  cgihandler.pike
lib/mudlib/: base_obj.pike  base_room.pike  body.pike  container.pike  indoor_room.pike  living.pike  more_ob.pike  object.pike  simple_ob.pike  verb_ob.pike
lib/mudlib/body/: cmd.pike  start.pike
lib/mudlib/classes/: effect.pike  move.pike
lib/mudlib/cmds/verbs/: drop.pike  get.pike  give.pike  go.pike  light.pike  look.pike
lib/mudlib/living/: effects.pike  grammar.pike  messages.pike  misc.pike
lib/mudlib/modules/: m_exit.pike  m_gettable.pike  m_glob.pike  m_grammar.pike  m_items.pike  m_messages.pike  m_parsing.pike  m_regex.pike
lib/mudlib/object/: m_behavior.pike  m_description.pike  m_flags.pike  m_hooks.pike  m_light.pike  m_name.pike  m_verbs.pike  m_visible.pike
lib/mudlib/room/: roomdesc.pike  state.pike
lib/mudlib/secure/: shell.pike  user.pike  verbd.pike
lib/mudlib/secure/modules/: m_input.pike  m_messages.pike  m_prepositions.pike
lib/mudlib/secure/shell/: getopt.pike  prompt.pike  shellfuncs.pike  shellvars.pike
lib/mudlib/secure/user/: channels.pike  io.pike  login.pike  sw_body.pike  sw_shell.pike  sw_user.pike  userinfo.pike
root/: test.pike
root/boot/: master-1.0.pike  master-1.1.pike  start.bat  start.sh
root/boot/system-1.0/: io.pike  kernel.pike  simul_efuns.pike  vfs.pike
root/boot/system-1.1/: .gitignore  io.pike  kernel.conf.example  kernel.pike  simul_efuns.pike  vfs.pike
root/boot/system-1.1/apache/: INSTALL  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac  mod_pikevm.c
root/boot/system-1.1/apache/src/: Makefile.am  Makefile.in  mod_pikevm.c  mod_pikevm.h  pikevm.conf
sbin/: ansid.pike  channeld.pike  cmdd.pike  ftpd.pike  ftpd_worker.pike  httpd.pike  httpd_worker.pike  init  languaged.pike  login.pike  pshell.pike  securityd.pike  telnetd.pike  userd.pike  verbd.pike  who.pike  wshell.pike
usr/share/pike-7.8/modref/: index.html
usr/share/pike-7.8/modref/ex/: 0.6_3A_3A.html  7.0_3A_3A.html  7.2_3A_3A.html  7.4_3A_3A.html  (+5 more)
usr/share/pike-7.8/traditional_manual/: chapter_1.html  chapter_10.html  chapter_11.html  chapter_12.html  chapter_13.html  chapter_14.html  chapter_15.html  chapter_16.html  chapter_18.html  chapter_19.html  chapter_2.html  chapter_20.html  chapter_21.html  chapter_22.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  index.html
var/domains/std/: adminroom.pike  void.pike
var/security/: secinfo.xml
var/www/html/: example.pike  index.html
(+9030 files in other folders)
